# TaskTracker

./: .gitignore  README.md  postman_collection.json  pyproject.toml
DjangoProject/: settings.py  urls.py
tasks/: models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
